# nqf-lint

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: bad_bohr_units.xyz  bad_floating_metal.xyz  bad_mining_cluster.json  bad_spin_state.json  good_hg_cluster.json  water.xyz
src/: lib.rs  main.rs  source.rs  xyz.rs
